--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ MAIN
 
 </div>
 
-<script src="file:///C:/Users/Charlie/Desktop/data.js"></script>
+<script src="data.js"></script>
 
 <script charset="utf-8">
 
